--- a/tmux.conf
+++ b/tmux.conf
@@ -1,46 +1,38 @@
 # reload tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
-# Use something easier to type as the prefix.
-set -g prefix C-q
-unbind C-b
-bind C-q send-prefix
+######################
+### DESIGN CHANGES ###
+######################
 
 # look pretty
 set-option -g default-terminal "screen-256color"
+set -g status off
 
-# faster command sequence
-set -s escape-time 0
+# panes
+set -g pane-border-fg black
+set -g pane-active-border-fg brightred
 
-# Highlight active window
-set-window-option -g window-status-current-bg red
+## Status bar design
+# status line
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
 
-#Enable mouse support (works in iTerm)
-set-window-option -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# messaging
+set -g message-fg black
+set -g message-bg yellow
+set -g message-command-fg blue
+set -g message-command-bg black
 
-## resize panes like vim
-### feel free to change the "5" to however many lines you want to resize by, only
-### one at a time can be slow
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# Act like Vim
-set-window-option -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# use different keys to split vertical and horizonal
-bind | split-window -h
-bind - split-window -v
+#window mode
+setw -g mode-bg colour6
+setw -g mode-fg colour0
 
 # Custom status bar
+# The statusbar {
+
 set -g status-left-length 32
 set -g status-right-length 150
 set -g status-interval 5
@@ -52,15 +44,20 @@ set -g status-right "#[fg=colour245] | #(date +%%H:%%M) | %d %b #[fg=colour254,b
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg=colour39,noreverse,bold] #I #W #[fg=colour39,bg=colour234,nobold]"
 
-# Activity
-setw -g monitor-activity on
-set -g visual-activity off
 
-# Autorename sanely.
-setw -g automatic-rename on
+# }
+# The messages {
 
-# Better name management
-bind c new-window
-bind , command-prompt "rename-window '%%'"
-bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour166
+
+# }
+
+# Act like Vim
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
