--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,8 @@ set-option -g default-terminal "screen-256color"
 set -g status off
 
 # panes
-set -g pane-border-style black
-set -g pane-active-border-style brightred
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=brightred
 
 ## Status bar design
 # status line
@@ -21,14 +21,14 @@ set -g status-fg colour12
 set -g status-interval 2
 
 # messaging
-set -g message-style black
-set -g message-style yellow
-set -g message-command-style blue
-set -g message-command-style black
+set -g message-style fg=black
+set -g message-style fg=yellow
+set -g message-command-style fg=blue
+set -g message-command-style fg=black
 
 #window mode
-setw -g mode-style colour6
-setw -g mode-style colour0
+setw -g mode-style fg=colour6
+setw -g mode-style fg=colour0
 
 # Custom status bar
 # The statusbar {
@@ -49,8 +49,8 @@ set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour16,bg
 # The messages {
 
 set -g message-style bold
-set -g message-style colour232
-set -g message-style colour166
+set -g message-style fg=colour232
+set -g message-style fg=colour166
 
 # }
 
