--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -658,7 +658,7 @@ initial_window_height 400
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts *
+enabled_layouts splits:split_axis=horizontal
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1629,8 +1629,8 @@ map kitty_mod+g show_last_command_output
 
 #: New window
 
-map kitty_mod+enter new_window
 map cmd+enter       new_window
+map cmd+shift+enter  launch --location=hsplit
 
 #::  You can open a new window running an arbitrary program, for
 #::  example::
